--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 
   <modules>
     <module>chapters/ch01-language-basics</module>
+    <module>chapters/ch02-operators</module>
   </modules>
 
   <properties>
