Add chapter 3 decision-making module

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <modules>
     <module>chapters/ch01-language-basics</module>
     <module>chapters/ch02-operators</module>
+    <module>chapters/ch03-making-decisions</module>
   </modules>
 
   <properties>
