--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>chapters/ch02-operators</module>
     <module>chapters/ch03-making-decisions</module>
     <module>chapters/ch04-core-apis</module>
+    <module>chapters/ch05-methods</module>
   </modules>
 
   <properties>
