Add Chapter 7 beyond classes module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>chapters/ch04-core-apis</module>
     <module>chapters/ch05-methods</module>
     <module>chapters/ch06-class-design</module>
+    <module>chapters/ch07-beyond-classes</module>
   </modules>
 
   <properties>
