--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>chapters/ch05-methods</module>
     <module>chapters/ch06-class-design</module>
     <module>chapters/ch07-beyond-classes</module>
+    <module>chapters/ch08-lambdas</module>
   </modules>
 
   <properties>
