Add Chapter 11 exceptions and localization module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>chapters/ch08-lambdas</module>
     <module>chapters/ch09-collections-generics</module>
     <module>chapters/ch10-streams</module>
+    <module>chapters/ch11-exceptions-localization</module>
   </modules>
 
   <properties>
