Ignore IDE/build artifacts and local tooling\n\n- Add Eclipse: .project, .classpath, .settings/\n- Add VS Code: .vscode/\n- Add compiled/build: bin/, out/\n- Keep existing: target/, .idea/, *.iml, *.class, .DS_Store\n- Add Windows metadata: Thumbs.db\n- Add local tooling: .claude/

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,22 @@ target/
 *.iml
 *.class
 .DS_Store
+# Eclipse/IDE artifacts
+.project
+.classpath
+.settings/
+
+# VS Code
+.vscode/
+
+# IntelliJ build output
+out/
+
+# Eclipse/Maven compiled output directories
+bin/
+
+# Windows explorer metadata
+Thumbs.db
+
+# Local AI tooling
+.claude/
